examples/type_system/failing/85_hm_function_effect_mismatch.flx
// parity-expected-stdout-begin
// parity-expected-stdout-end
// parity-expected-stderr-begin
// • 1 error • examples/type_system/failing/85_hm_function_effect_mismatch.flx
// error[E300]: Argument Type Mismatch
//
// I found the wrong type in the 1st argument to `apply_with_time`.
//
//   examples/type_system/failing/85_hm_function_effect_mismatch.flx:40:21
//    |
// 35 | fn apply_with_time(f: ((Int) -> Int with Time), x: Int) -> Int {
//    | -------------------------------------------------------------- `apply_with_time` expects `(Int) -> Int with Time` as the 1st parameter
// 36 |     f(x)
// 37 | }
// 38 |
// 39 | fn main() -> Unit {
// 40 |     apply_with_time(io_add_one, 1)
//    |                     ^^^^^^^^^^
//    |                     ---------- this argument has type `(Int) -> Int with Console, FileSystem, Stdin`
//
// Note:
//   expected argument type: (Int) -> Int with Time
//   found argument type: (Int) -> Int with Console, FileSystem, Stdin
//   the actual argument type is inferred from this expression
//   the expected argument type comes from the function signature
//
// Help:
//   Pass a `(Int) -> Int with Time` value as the 1st argument.
// parity-expected-stderr-end
// expect: compile_error
// expect-error: E300

fn io_add_one(x: Int) -> Int with IO { x + 1 }

fn apply_with_time(f: ((Int) -> Int with Time), x: Int) -> Int {
    f(x)
}

fn main() -> Unit {
    apply_with_time(io_add_one, 1)
}
